# haskell-course

./: .gitignore
hw1/: hw1.cabal
hw1/src/: Castles.hs  Folding.hs  Monoids.hs  Nat.hs  PatternMatching.hs  SimpleFunctions.hs  Tree.hs  WeekDay.hs
hw2/: README.md  hw2.cabal
hw2/src/: MonadicCalc.hs  ParserCombinators.hs  Parsers.hs  TypesHierarchy.hs
hw2/test/: ExprSpec.hs  ParserSpec.hs  Property.hs  StringSumSpec.hs
hw3/: hw3.cabal
hw3/app/: Main.hs
hw3/src/: Expression.hs  Parser.hs  Program.hs  Statement.hs
hw4/bench/: Main.hs
hw4/src/: BaseLens.hs  FSLens.hs  TH.hs  Walker.hs
hw4/test/: BaseLensSpec.hs
