name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            ttps://github.com/karavaevitalii/haskell-course/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Vitalii Karavaev
maintainer:          fkve97@gmail.com
copyright:           2018 Vitalii Karavaev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     SimpleFunctions PatternMatching WeekDay Nat Tree Castles Folding Monoids
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
