name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/karavaevitalii/haskell-course/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Vitalii Karavaev 
maintainer:          fkve97@gmail.com
copyright:           2018 Vitalii Karavaev 

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

executable hw3-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wextra
  build-depends:
      base >=4.9 && <5
    , hw3
    , utf8-string
    , bytestring
    , mtl
  other-modules:
      Paths_hw3
  default-language: Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Expression
                     , Statement
                     , Parser
                     , Program
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , mtl
                     , megaparsec >= 6.0
                     , exceptions
                     , utf8-string
                     , bytestring
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw3
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
